tests/snapshots/run_wpt_conformance__coreml_isInfinite_float32_3D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
is_infinite.https.any.js isInfinite float32 3D tensor, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported operation: isInfinite

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    isInfiniteInput: f32[2, 2, 2];
  }

  nodes {
    [isInfiniteOutput] = isInfinite(isInfiniteInput, label="");
  }

  outputs { isInfiniteOutput; }
}
