tests/snapshots/run_wpt_conformance__coreml_isInfinite_float32_large_finite_values.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
is_infinite.https.any.js isInfinite float32 large finite values, coreml
 Failed to build graph: graph conversion failed for coreml_mlprogram: Unsupported operation: isInfinite

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    isInfiniteInput: f32[6];
  }

  nodes {
    [isInfiniteOutput] = isInfinite(isInfiniteInput, label="");
  }

  outputs { isInfiniteOutput; }
}
